--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ project(cs323-proj4)
 set(CMAKE_CXX_STANDARD 17 )
 
 add_executable(splc main.cpp mips32.cpp tac.cpp)
+add_executable(hanoi hanoi.cpp)
